--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,12 @@
         "doctrine/dbal": "~2.4",
 		"twig/twig": "~1.16",
 		"symfony/security": "~2.4",
-		"symfony/twig-bridge": "~2.4"
+		"symfony/twig-bridge": "~2.4",
+		"symfony/form": "~2.4",
+		"symfony/translation": "~2.4",
+		"twig/extensions": "~1.2",
+		"symfony/validator": "~2.4",
+		"symfony/config": "~2.4"
     },
     "autoload": {
         "psr-4": {"NanarStore\\": "src"}
